<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:id="@+id/all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:keepScreenOn="true"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingBottom="@dimen/vertical_padding" >

        <SurfaceView
            android:id="@+id/rotate_angle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/horizontal_padding"
            android:layout_marginLeft="@dimen/horizontal_padding"
            android:layout_marginRight="@dimen/horizontal_padding"
            android:layout_marginTop="@dimen/vertical_padding"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/header_gears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:paddingLeft="@dimen/horizontal_padding"
            android:text="@string/gears"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/gears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding" >

            <RadioButton
                android:id="@+id/gear_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gear_forward" />

            <RadioButton
                android:id="@+id/gear_backward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gear_backward" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/obstacle_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/horizontal_padding"
            android:layout_marginTop="@dimen/horizontal_padding"
            android:paddingBottom="@dimen/horizontal_padding"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding"
            android:paddingTop="@dimen/horizontal_padding" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obstacle_distance"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_padding"
            android:layout_marginRight="@dimen/horizontal_padding" >

            <TextView
                android:id="@+id/header_rotation_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotation_speed"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/header_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rotation_speed_text"
                android:text="@string/speed"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/header_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/speed_text"
                android:text="@string/distance"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ProgressBar
                android:id="@+id/rotation_speed_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/distance_text"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/header_rotation_speed" />

            <TextView
                android:id="@id/rotation_speed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/rotation_speed_progress"
                android:layout_below="@id/rotation_speed_progress"
                android:text="@string/rotation_speed_format"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ProgressBar
                android:id="@+id/speed_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/distance_text"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/header_speed" />

            <TextView
                android:id="@id/speed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/speed_progress"
                android:layout_below="@id/speed_progress"
                android:text="@string/speed_format"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@id/distance_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/header_distance"
                android:layout_marginLeft="@dimen/horizontal_padding"
                android:layout_toRightOf="@id/header_distance"
                android:gravity="right"
                android:text="@string/distance_format"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/horizontal_padding"
            android:layout_marginRight="@dimen/horizontal_padding"
            android:layout_marginTop="@dimen/vertical_padding" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/title_background" />

                <TextView
                    android:id="@+id/log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingBottom="@dimen/vertical_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:paddingTop="@dimen/horizontal_padding" >

        <Button
            android:id="@+id/vehicle_break"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/vehicle_break" />

        <TextView
            android:id="@+id/set_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/rotation_speed_format"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.widget.VerticalSeekBar
            android:id="@+id/speed_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/vehicle_break"
            android:layout_below="@id/set_speed"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>

<RelativeLayout
    android:id="@+id/cover"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cover_color"
    android:clickable="true" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/horizontal_padding"
        android:gravity="center_horizontal"
        android:text="@string/prompt_connect"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/prompt_connect" />
</RelativeLayout>

</FrameLayout>